# boost-beast-cmake-template

./: .clangd  .gitignore  CMakeLists.txt  README.md  makefile
.github/workflows/: ci.yml
src/: certificates.cpp  certificates.hpp  client-async.cpp  client-sync.cpp  http_client_async.cpp  http_client_async.hpp  http_client_sync.cpp  http_client_sync.hpp  libcurl.h  main.cpp
